--- a/development/index.html
+++ b/development/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title><%= htmlWebpackPlugin.options.title %></title>
-  </head>
+    <title>My PWA</title>
+  <link rel="icon" href="fav-pwa.png"><script defer src="main.js"></script></head>
   <body>
     <div class="app" id="app">
       <header class="header">
@@ -19,16 +19,16 @@
       <main class="main">
         <div class="main__container container">
           <div class="main__item">
-            <img src="../img/main_1.jpg" alt="main_1" />
+            <img src="img/main_1.jpg" alt="main_1" />
           </div>
           <div class="main__item">
-            <img src="../img/main_2.jpg" alt="main_2" />
+            <img src="img/main_2.jpg" alt="main_2" />
           </div>
           <div class="main__item">
-            <img src="../img/main_3.jpg" alt="main_3" />
+            <img src="img/main_3.jpg" alt="main_3" />
           </div>
           <div class="main__item">
-            <img src="../img/main_4.jpg" alt="main_4" />
+            <img src="img/main_4.jpg" alt="main_4" />
           </div>
         </div>
       </main>
