--- a/src/template.html
+++ b/src/template.html
@@ -18,17 +18,17 @@
       </header>
       <main class="main">
         <div class="main__container container">
-          <div class="main__item">
-            <img src="../img/main_1.jpg" alt="main_1" />
+          <div class="main__item" id="img-main-1">
+            <img src="" alt="main_1" />
           </div>
-          <div class="main__item">
-            <img src="../img/main_2.jpg" alt="main_2" />
+          <div class="main__item" id="img-main-2">
+            <img src="" alt="main_2" />
           </div>
-          <div class="main__item">
-            <img src="../img/main_3.jpg" alt="main_3" />
+          <div class="main__item" id="img-main-3">
+            <img src="" alt="main_3" />
           </div>
-          <div class="main__item">
-            <img src="../img/main_4.jpg" alt="main_4" />
+          <div class="main__item" id="img-main-4">
+            <img src="" alt="main_4" />
           </div>
         </div>
       </main>
